Session-37/networking/resources.yml
# resources.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app 
---
# backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend  
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo:0.2.3
        args: ["-text=backend", "-listen=:8080"]
        ports:  
        - containerPort: 8080
---
# backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: example-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
# db fake deployment (using http-echo for simplicity)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: hashicorp/http-echo:0.2.3
        args: ["-text=db", "-listen=:5432"]
        ports:
        - containerPort: 5432
---
# db Service
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: example-app
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
# frontend development (sleeping containers we will exec into )
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: curlimages/curl:8.3.0
        command: ["sh", "-c" ,"sleep 3600"]
